--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,16 @@
 </head>
 
 <body>
+  <script>
+    if('serviceWorker' in navigator) {
+      window.addEventListener('load', event => {
+        navigator.serviceWorker.register('service-worker.js')
+          .then(reg => {
+            console.log('Service worker found ', reg);
+          })
+      })
+    }
+  </script>
   <div class="wrapper">
     <div class="total">
       <div class="total">Your total is: $<span id="total">0</span></div>
